// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test user service test to get a user 1`] = `
User {
  "country": "country",
  "email": "email",
  "givenName": "givenName",
  "houseNumber": "houseNumber",
  "phone": "phone",
  "postcode": "postcode",
  "state": "state",
  "street": "street",
  "suburb": "suburb",
  "surname": "surname",
}
`;

exports[`Test user service test to save a user 1`] = `
Object {
  "data": Object {
    "data": User {
      "country": "country",
      "email": "email",
      "givenName": "givenName",
      "houseNumber": "houseNumber",
      "phone": "phone",
      "postcode": "postcode",
      "state": "state",
      "street": "street",
      "suburb": "suburb",
      "surname": "surname",
    },
  },
  "model": "user",
  "options": undefined,
  "query": Object {
    "userId": 1234,
  },
}
`;

exports[`Test user service test to update a user 1`] = `
Object {
  "data": Object {
    "data.givenName": "saman",
  },
  "model": "user",
  "options": undefined,
  "query": Object {
    "userId": 1234,
  },
}
`;
